--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 server.port=80
 
+### setup Postgres driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+
+### connect URL for localhost with port 26257 with insecure connection
+spring.datasource.url=jdbc:postgresql://localhost:26257/fleetsy?ssl=true&sslmode=disable
+spring.datasource.username=fleetsy_app
+spring.datasource.password=
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+### set baseline-on-migrate with Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
